# dircleaner

./: README.md  pyproject.toml  setup.cfg
src/cleandir/: cli.py
src/dir_org/: cli.py  func.py
tests/: test_cli.py  test_func.py  utils.py
