[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cleandir"
version = "0.1.0"
description = "CLI utility to sort directories based on file extensions"
authors = [
    { name = "Gabriel Riquelme" },
]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10"
]
dependencies = [
    "click>8.1",
]
requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/griquelme/cleandir"

[project.scripts]
cleandir = "cleandir:app"

[tool.mypy]
python_version = "3.9"
files = ["src/cleandir"]