[metadata]
name = cleandir
version = 0.1.0
description = CLI utility to sort directories based on file extensions
author = Gabriel Riquelme
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages =
    cleandir
package_dir =
    =src
install_requires =
    click>=8.1
python_requires = >=3.9
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
nmrtools = py.typed

[options.entry_points]
console_scripts =
    cleandir = cleandir:app

[flake8]
max-line-length = 88
extend-ignore = E203, E501